# easypaste

./: .gitignore  Cargo.toml  README.md  build.cmd  build.sh  config.toml  entitlements.plist  example_input.txt
src/: main.rs
