[package]
name = "easypaste"
version = "0.1.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

global-hotkey = "0.7"
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
winit = "0.29"
enigo = "0.5"
webbrowser = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xtest"] }
